--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/kjvelarde/angular-multiselectsearchtree"
   },
   "dependencies": {
-    "angular": "~1.3.x",
+    "angular": "^1.3.x",
     "bootstrap-css-only": "~3.2.0"
   },
   "devDependencies": {
