Cascade Selection and Expand Tree Initially
-Added selection cascade effect from parent to children.
-Make tree view expanded initially

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "author": "Karl James Velarde",
   "name": "kjvelarde-angular-multiselectsearchtree",
-  "version": "0.8.0",
-  "description": "Amazing tree list component; bind ready with ability to search. Powered by AngularJS",
+  "version": "0.8.5",
+  "description": "Amazing tree list component; bind ready with ability to search, collide selection. Powered by AngularJS",
   "main": "index.js",
   "homepage": "https://github.com/kjvelarde",
   "repository": {
@@ -10,7 +10,7 @@
     "url": "https://github.com/kjvelarde/angular-multiselectsearchtree"
   },
   "dependencies": {
-    "angular": "^1.3.x",
+    "angular": "~1.3.x",
     "bootstrap-css-only": "~3.2.0"
   },
   "devDependencies": {
