--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,16 @@
 {
   "author": "Karl James Velarde",
   "name": "kjvelarde-angular-multiselectsearchtree",
-  "version": "0.9.5",
+  "version": "1.0",
   "description": "Amazing tree list component; bind ready with ability to search, collide selection. Powered by AngularJS",
   "main": "index.js",
-  "homepage": "https://github.com/kjvelarde",
+  "homepage": "https://www.kjvelarde.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/kjvelarde/angular-multiselectsearchtree"
   },
   "dependencies": {
-    "angular": "~1.3.x",
+    "angular": "~1.6.x",
     "bootstrap-css-only": "~3.2.0"
   },
   "devDependencies": {
